# bilsimulator

./: CMakeLists.txt  README.md  main.cpp
src/: application.cpp  car.cpp  car.h  main.cpp  physics.cpp  physics.h  world.cpp  world.h
src/assets/cars/simple_car/: simple_car_body.mtl  simple_car_wheels3.mtl
src/assets/cars/test/: free_car_001.mtl
src/assets/objects/buildings/: HouseLowPoly2.mtl
src/assets/objects/misc/: Barrier.mtl  finishline.mtl
src/assets/objects/road/: RoadNetwork.mtl  RoadNetwork2.mtl
src/tests/: test_car.cpp
